--- a/TRAINING HTML 1.html
+++ b/TRAINING HTML 1.html
@@ -4,6 +4,6 @@
         <title>WebsiteKU</title>
     </head> 
     <body>
-        <h1>Hellow World123</h1>
+        <h1>Hellow World</h1>
     </body>
 </html>
